parallel api calls for way more performance